# Stock-Portfolio-Manager

./: .gitignore  Cargo.toml  idea.md
migrations/2023-02-12-102321_create_posts/: up.sql
migrations/2023-02-15-130133_users/: up.sql
migrations/stocks/: down.sql  up.sql
src/: api_manager.rs  config.rs  database.rs  lib.rs  main.rs  models.rs  schema.rs  stock.rs
src/database/: models.rs  schema.rs  stocks.rs  users.rs
