[package]
name = "stock_portfolio_manager"
version = "0.1.0"
edition = "2021"
authors = ["Simon Bauer <simppabauer@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
alpha_vantage ="0.9.0"
diesel = {version = "2.0.3", features = ["sqlite"]}
dotenvy = "0.15"
reqwest = "0.11.14"
salvo = "*"
serde = "1.0.152"
serde_json = "1.0.93"
serde_derive = "1.0.152"
tokio = { version = "1.25.0", features = ["full"] }